Fixed word wrap, fixed autoscroll

--- a/static/css/wigslace.less
+++ b/static/css/wigslace.less
@@ -25,6 +25,7 @@ html, body {height: 100%; margin: 0; padding: 0; border: none; overflow: hidden;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	font: @font-default 'Lato', sans-serif;
+	word-wrap: break-word;
 }
 
 a {
